[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/RM003/RM003.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/RM002/RM002.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/RM004/RM004.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/RM001/RM001.tscn" type="PackedScene" id=4]
[ext_resource path="res://stages/stage.gd" type="Script" id=5]
[ext_resource path="res://stages/stage_mobs001.gd" type="Script" id=6]
[ext_resource path="res://stages/Stage003.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 36 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 90 )

[node name="Scene" type="Node2D"]
script = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 18

[node name="Background" type="Sprite" parent="StaticBody2D"]
position = Vector2( 160, 90 )
z_index = -2
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160, 36 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160, 216 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 376, 90 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -56, 90 )
shape = SubResource( 2 )

[node name="World" type="YSort" parent="."]
script = ExtResource( 6 )

[node name="RM001" parent="World" instance=ExtResource( 4 )]
position = Vector2( 160, 120 )

[node name="RM002" parent="World" instance=ExtResource( 2 )]
position = Vector2( 160, 120 )

[node name="RM003" parent="World" instance=ExtResource( 1 )]
position = Vector2( 160, 120 )

[node name="RM004" parent="World" instance=ExtResource( 3 )]
position = Vector2( 160, 120 )

[node name="SpawnTimer" type="Timer" parent="World"]
one_shot = true
